--- a/src/app/modules/admin/components/track-list/track-list.component.scss
+++ b/src/app/modules/admin/components/track-list/track-list.component.scss
@@ -1,10 +1,14 @@
 @import "globals.scss";
 
 :host {
+	width: 100%;
+	overflow: auto;
+	display: block;
 
 	.tracks {
 		padding: $padding;
 		font-size: 0.9em;
+		width: 100%;
 	}
 
 	.heading {
@@ -12,10 +16,9 @@
 	}
 
 	.track {
-		display: grid;
-		grid-template-columns: 60px 2fr 1fr 1fr 50px 60px 60px 50px;
-		grid-gap: $padding;
-		padding: $padding-sm 0;
+		td {
+			padding: $padding-xs $padding-sm;
+		}
 		border-bottom: 1px solid var(--control-border);
 
 		&:hover {
